# python-htmx-chess

./: README.md  pyproject.toml
chessy/: __init__.py
chessy/templates/: index.html.j2
