[tool.poetry]
name = "python-htmx-chess"
version = "0.1.0"
description = ""
authors = ["Erez Ben Moshe <erezbmp@gmail.com>"]
readme = "README.md"
packages = [{ include = "chessy" }]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
